# crossdaemonize

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  run_tests.sh
.github/workflows/: docs.yml
crossdaemonize/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
crossdaemonize-tests/: Cargo.toml
crossdaemonize-tests/examples/: tester.rs
crossdaemonize-tests/src/: lib.rs
crossdaemonize-tests/tests/: tests.rs
crossdaemonize/examples/: complex.rs
crossdaemonize/src/: error.rs  lib.rs
