[package]
name = "crossdaemonize-tests"
version = "0.6.0"
edition = "2021"
publish = false
authors = ["Fedor Gogolev <knsd@knsd.net>"]
description = "Test suite for crossdaemonize"
repository = "https://github.com/knsd/crossdaemonize"
license = "MIT OR Apache-2.0"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
crossdaemonize = { path = "../crossdaemonize" }
os_pipe = "0.9.2"
libc = { version = "0.2.98", optional = true }
tempfile = "3.20.0"

[dev-dependencies]
[target.'cfg(unix)'.dependencies]
libc = "0.2.98"
